Sync ShadowApplicationPlugin with ApplicationPlugin (#1224)
* Update addRunTask

* Note kdoc for ShadowApplicationPlugin

* Update configureDistribution and cleanups

* Note 755

* Test `application.applicationDistribution` usage

* Update changelog

* Remove redundant `shadowApplicationDistributionsShouldUseShadowJar`

Syncs with https://github.com/gradle/gradle/blob/45a20d82b623786d19b50185e595adf3d7b196b2/platforms/jvm/plugins-application/src/main/java/org/gradle/api/plugins/ApplicationPlugin.java.